# rook_exercise

./: .gitignore  Cargo.toml  README.md  get_static_resources.sh
src/: main.rs
src/rook_exercise/: app_configuration.rs  mod.rs
src/rook_exercise/api/: mod.rs
src/rook_exercise/model/: errors.rs  exercise.rs  mod.rs
src/rook_exercise/page/: error_display.rs  index.rs  mod.rs  stats.rs
src/rook_exercise/page/activity/: add.rs  add_form.rs  list.rs  mod.rs
src/rook_exercise/service/: exercise_repo.rs  exercise_repo_sled.rs  mod.rs  sled_util.rs
www/: style.css
