[package]
name = "rook_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0", features = ["openssl"] }
env_logger = "0.10.0"
maud = { version = "0.25.0", features = ["actix-web"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = "1.33.0"
